Feature: work with test server with HTTP requests. Mocha, axios, etc [ref: 4 module tasks]

--- a/nodeJS/nodejs sandebox/package.json
+++ b/nodeJS/nodejs sandebox/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nodejs_sandebox",
   "version": "1.0.0",
-  "description": "",
+  "description": "my node.js sandbox for testing and exercises",
   "main": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,6 +9,7 @@
   "author": "kuklinv",
   "license": "ISC",
   "devDependencies": {
+    "axios": "^0.19.0",
     "chai": "^4.2.0",
     "sinon": "^7.5.0"
   }
